--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,5 @@
-== README
+Application Version Details:
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
-
-Things you may want to cover:
-
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+* Application Verions: 1.0.0
+* Ruby version: 2.0.0
+* Rails Version: 4.2.0
